--- a/index.css
+++ b/index.css
@@ -11,7 +11,9 @@ body{
 #logo{
     height: 26px;
 }
-
+div{
+    border: 1px solid;
+}
 input[type=search]{
     padding-top: 15px;
     margin-right: -4px;
@@ -23,4 +25,7 @@ img{
 button img {
     margin:0px;
     
+}
+form{
+    margin-top: 10px;
 }
