main section of the page

--- a/index.css
+++ b/index.css
@@ -29,3 +29,19 @@ button img {
 form{
     margin-top: 10px;
 }
+/*#recomend{
+    display: flex;
+    width: 30%;
+}
+#side{
+    display: flex;
+}
+#embeded{
+    display: flex;
+    width: 70%;
+}
+
+[container]{
+    display: flex;
+    flex-direction: row;
+}*/
